# scrt-prediction

./: .env.example  .gitignore  .prettierrc.json  README.md  package-lock.json  package.json  polar.config.js
accounts/: getAccounts.js  key.example.json  local.js  local.json  mainnet.js  mainnet.json  testnet.js
contracts/oracle/: Cargo.toml
contracts/oracle/examples/: schema.rs
contracts/oracle/schema/: handle_msg.json  query_msg.json
contracts/oracle/src/: contract.rs  state.rs
contracts/oracle/src/tests/: contract_test.rs  test_utils.rs
contracts/prediction/: Cargo.toml
contracts/prediction/examples/: schema.rs
contracts/prediction/schema/: config_response.json  handle_msg.json  init_msg.json  query_msg.json
contracts/prediction/src/: contract.rs  handler.rs  manage.rs  query.rs  state.rs
contracts/prediction/src/tests/: contract_test.rs  test_utils.rs
scripts/: deployOracle.js  deployPrediction.js
test/: oracle.spec.js  prediction.spec.js  prediction_snip20.spec.js  utils.js
